# polysemy-panic-example

./: cabal.project  polysemy-panic-example.cabal  readme.md
src/: EffectStack.hs  Main.hs  OneModule.hs  OtherModule.hs  PanicModule.hs
